<resources>
    <string name="app_name">Night Watch</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.\n\nLicensed under the Amazon Software License (the "License").\nYou may not use this file except in compliance with the License.\nA copy of the License is located at\n\nhttp://aws.amazon.com/asl/
\n\nor in the "license" file accompanying this app. This app is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="more_info">This is a sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="My_profile" style="text-align:left">\u25C6 My Profile</string>
    <string name="Terms_privacy_policy">\u25C6 Terms \u0026  privacy policy</string>
    <string name="Help_feedback">\u25C6 Help \u0026  feedback</string>
    <string name="Sign_out">\u25C6 Sign out</string>


    <!-- Bottom item -->
    <string name="title_home">Home</string>
    <string name="title_wakeme">Wakeme</string>
    <string name="title_help">Help</string>
    <string name="title_account">Account</string>
    <string name="action_settings">Settings</string>

</resources>
